Scraped Indian Express Webite

--- a/new-web-scraping/news-webscrap.ipynb
+++ b/new-web-scraping/news-webscrap.ipynb
@@ -2,48 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c6a39afd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nmultipage_scraper.py\\n\\nUsage examples:\\n    # Basic run (scrape up to 200 pages starting from the given URL)\\n    python multipage_scraper.py \"https://www.w3schools.com/html/html_responsive.asp\" --max-pages 200 --output json --out-file w3_pages.json\\n\\n    # Save to all formats and limit to 50 pages with 1 second delay\\n    python multipage_scraper.py \"https://www.w3schools.com/html/html_responsive.asp\" --max-pages 50 --output all --delay 1.0 --out-file w3_all\\n\\nNotes:\\n - The scraper respects robots.txt by default.\\n - It only follows links within the same domain and (optionally) same path prefix.\\n - Be polite: set delay and don\\'t hammer the server.\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\"\"\"\n",
-    "multipage_scraper.py\n",
-    "\n",
-    "Usage examples:\n",
-    "    # Basic run (scrape up to 200 pages starting from the given URL)\n",
-    "    python multipage_scraper.py \"https://www.w3schools.com/html/html_responsive.asp\" --max-pages 200 --output json --out-file w3_pages.json\n",
-    "\n",
-    "    # Save to all formats and limit to 50 pages with 1 second delay\n",
-    "    python multipage_scraper.py \"https://www.w3schools.com/html/html_responsive.asp\" --max-pages 50 --output all --delay 1.0 --out-file w3_all\n",
-    "\n",
-    "Notes:\n",
-    " - The scraper respects robots.txt by default.\n",
-    " - It only follows links within the same domain and (optionally) same path prefix.\n",
-    " - Be polite: set delay and don't hammer the server.\n",
-    "\"\"\"\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "543fa810",
+   "id": "6159cfd1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import argparse\n",
     "import csv\n",
     "import json\n",
@@ -57,38 +21,79 @@
     "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "from urllib.robotparser import RobotFileParser\n"
+    "from urllib.robotparser import RobotFileParser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e96e29db",
+   "execution_count": 5,
+   "id": "056d5f75",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# ---------- CONFIG ----------\n",
-    "USER_AGENT = \"MultipageScraper/1.0 (+https://yourdomain.example)\"\n",
-    "DEFAULT_DELAY = 0.5  # seconds between requests\n",
-    "TIMEOUT = 15\n",
+    "# Use a realistic browser UA for news sites\n",
+    "USER_AGENT = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36\"\n",
+    "DEFAULT_DELAY= 2.0    # minimum seconds between requests (randomized)\n",
+    "DEFAULT_DELAY_MAX = 5.0    # maximum seconds between requests (randomized)\n",
+    "TIMEOUT = (10, 40)         # (connect timeout, read timeout) in seconds\n",
+    "MAX_RETRIES = 4            # network retries\n",
+    "BACKOFF_FACTOR = 1.0       # exponential backoff factor for retries\n",
+    "# Optionally rotate a small list of UAs to be safer (not required)\n",
+    "USER_AGENTS = [USER_AGENT]\n",
     "# ---------------------------\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c409f378",
+   "execution_count": 6,
+   "id": "f72f0d6f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] https://www.w3schools.com/html/html_responsive.asp (words: 1209)\n",
-      "Saved JSON -> scrape_outputs/w3_output.json\n",
-      "Saved CSV -> scrape_outputs/w3_output.csv\n"
+      "[1] https://indianexpress.com/ (words: 4066)\n",
+      "[2] https://indianexpress.com/search/ (words: 1397)\n",
+      "[3] https://indianexpress.com/newsletters/ (words: 218)\n",
+      "[4] https://indianexpress.com/international/ (words: 536)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[fetch error] https://indianexpress.com/subscribe/all-access/ -> 403 Client Error: Forbidden for url: https://indianexpress.com/subscribe/all-access/\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5] https://indianexpress.com/todays-paper/ (words: 264)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[fetch error] https://indianexpress.com/subscribe/all-access/?utm_source=IESITE&utm_medium=Banner&utm_campaign=EpaperL1 -> 403 Client Error: Forbidden for url: https://indianexpress.com/subscribe/all-access/?utm_source=IESITE&utm_medium=Banner&utm_campaign=EpaperL1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6] https://indianexpress.com/section/india/ (words: 2153)\n",
+      "[7] https://indianexpress.com/section/upsc-current-affairs/ (words: 2770)\n",
+      "[8] https://indianexpress.com/about/express-premium/ (words: 1378)\n",
+      "[9] https://indianexpress.com/section/entertainment/ (words: 32)\n",
+      "[10] https://indianexpress.com/politics/ (words: 804)\n",
+      "Saved JSON -> scrape_outputs/indianexp_output.json\n",
+      "Saved CSV -> scrape_outputs/indianexp_output.csv\n"
      ]
     }
    ],
@@ -246,56 +251,40 @@
     "        print(f\"[{pages_crawled}] {url} (words: {result['num_words']})\")\n",
     "        time.sleep(delay)\n",
     "\n",
-    "    # Save outputs (use absolute path to workspace for reliability)\n",
-    "    try:\n",
-    "        workspace_dir = os.path.abspath(os.path.join(os.path.dirname(__file__), \"..\"))\n",
-    "    except Exception:\n",
-    "        # Fallback to current working directory when __file__ is not defined (e.g., in notebooks)\n",
-    "        workspace_dir = os.path.abspath(os.getcwd())\n",
-    "\n",
-    "    out_dir = os.path.join(workspace_dir, \"scrape_outputs\")\n",
-    "    os.makedirs(out_dir, exist_ok=True)\n",
+    "    # Save outputs\n",
+    "    os.makedirs(\"scrape_outputs\", exist_ok=True)\n",
     "\n",
     "    if \"json\" in output_formats or \"all\" in output_formats:\n",
-    "        json_path = os.path.join(out_dir, f\"{out_file}.json\")\n",
-    "        try:\n",
-    "            with open(json_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "                json.dump(results, f, ensure_ascii=False, indent=2)\n",
-    "            print(f\"Saved JSON -> {json_path}\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"[save error] JSON -> {json_path} : {e}\", file=sys.stderr)\n",
+    "        json_path = f\"scrape_outputs/{out_file}.json\"\n",
+    "        with open(json_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "            json.dump(results, f, ensure_ascii=False, indent=2)\n",
+    "        print(f\"Saved JSON -> {json_path}\")\n",
     "\n",
     "    if \"csv\" in output_formats or \"all\" in output_formats:\n",
-    "        csv_path = os.path.join(out_dir, f\"{out_file}.csv\")\n",
-    "        try:\n",
-    "            with open(csv_path, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
-    "                writer = csv.writer(f)\n",
-    "                writer.writerow([\"url\", \"status_code\", \"title\", \"meta_description\", \"num_words\", \"content_snippet\"])\n",
-    "                for r in results:\n",
-    "                    snippet = (r[\"content\"][:300] + \"...\") if len(r[\"content\"]) > 300 else r[\"content\"]\n",
-    "                    writer.writerow([r[\"url\"], r[\"status_code\"], r[\"title\"], r[\"meta_description\"], r[\"num_words\"], snippet])\n",
-    "            print(f\"Saved CSV -> {csv_path}\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"[save error] CSV -> {csv_path} : {e}\", file=sys.stderr)\n",
+    "        csv_path = f\"scrape_outputs/{out_file}.csv\"\n",
+    "        with open(csv_path, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "            writer = csv.writer(f)\n",
+    "            writer.writerow([\"url\", \"status_code\", \"title\", \"meta_description\", \"num_words\", \"content_snippet\"])\n",
+    "            for r in results:\n",
+    "                snippet = (r[\"content\"][:300] + \"...\") if len(r[\"content\"]) > 300 else r[\"content\"]\n",
+    "                writer.writerow([r[\"url\"], r[\"status_code\"], r[\"title\"], r[\"meta_description\"], r[\"num_words\"], snippet])\n",
+    "        print(f\"Saved CSV -> {csv_path}\")\n",
     "\n",
     "    if \"xml\" in output_formats or \"all\" in output_formats:\n",
-    "        xml_path = os.path.join(out_dir, f\"{out_file}.xml\")\n",
-    "        try:\n",
-    "            root = ET.Element(\"pages\")\n",
-    "            for r in results:\n",
-    "                p = ET.SubElement(root, \"page\")\n",
-    "                ET.SubElement(p, \"url\").text = r[\"url\"]\n",
-    "                ET.SubElement(p, \"status_code\").text = str(r[\"status_code\"])\n",
-    "                ET.SubElement(p, \"title\").text = r[\"title\"] or \"\"\n",
-    "                ET.SubElement(p, \"meta_description\").text = r[\"meta_description\"] or \"\"\n",
-    "                ET.SubElement(p, \"num_words\").text = str(r[\"num_words\"])\n",
-    "                c = ET.SubElement(p, \"content\")\n",
-    "                c.text = r[\"content\"]\n",
-    "            tree = ET.ElementTree(root)\n",
-    "            tree.write(xml_path, encoding=\"utf-8\", xml_declaration=True)\n",
-    "            print(f\"Saved XML -> {xml_path}\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"[save error] XML -> {xml_path} : {e}\", file=sys.stderr)\n",
+    "        xml_path = f\"scrape_outputs/{out_file}.xml\"\n",
+    "        root = ET.Element(\"pages\")\n",
+    "        for r in results:\n",
+    "            p = ET.SubElement(root, \"page\")\n",
+    "            ET.SubElement(p, \"url\").text = r[\"url\"]\n",
+    "            ET.SubElement(p, \"status_code\").text = str(r[\"status_code\"])\n",
+    "            ET.SubElement(p, \"title\").text = r[\"title\"] or \"\"\n",
+    "            ET.SubElement(p, \"meta_description\").text = r[\"meta_description\"] or \"\"\n",
+    "            ET.SubElement(p, \"num_words\").text = str(r[\"num_words\"])\n",
+    "            c = ET.SubElement(p, \"content\")\n",
+    "            c.text = r[\"content\"]\n",
+    "        tree = ET.ElementTree(root)\n",
+    "        tree.write(xml_path, encoding=\"utf-8\", xml_declaration=True)\n",
+    "        print(f\"Saved XML -> {xml_path}\")\n",
     "\n",
     "    return results\n",
     "\n",
@@ -308,19 +297,18 @@
     "    p.add_argument(\"--out-file\", default=\"output\", help=\"Base filename (without extension) saved in scrape_outputs/\")\n",
     "    p.add_argument(\"--no-prefix-restrict\", action=\"store_true\", help=\"Don't restrict crawl to same path prefix (will crawl entire domain)\")\n",
     "    return p.parse_args()\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
     "    import sys\n",
     "    \n",
     "    # If running inside Jupyter/IPython, ignore unknown args\n",
     "    if \"ipykernel\" in sys.modules:\n",
     "        results = crawl(\n",
-    "            start_url=\"https://www.w3schools.com/html/html_responsive.asp\",\n",
+    "            start_url=\"https://indianexpress.com/\",\n",
     "            max_pages=10,\n",
     "            delay=1.0,\n",
     "            restrict_to_prefix=True,\n",
     "            output_formats=(\"json\", \"csv\"),\n",
-    "            out_file=\"w3_output\"\n",
+    "            out_file=\"indianexp_output\"\n",
     "        )\n",
     "    else:\n",
     "        args = parse_args()\n",
@@ -334,14 +322,6 @@
     "            out_file=args.out_file,\n",
     "        )\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc135486",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
